--- a/mosun/app/src/main/res/values/styles.xml
+++ b/mosun/app/src/main/res/values/styles.xml
@@ -12,6 +12,15 @@
 
     </style>
 
+    <!-- 텍스트뷰 스타일 -->
+    <style name="SubTitleTheme" parent="@android:style/Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
     <style name="Button">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">2dip</item>
