--- a/front/app/src/main/res/layout/activity_stamp.xml
+++ b/front/app/src/main/res/layout/activity_stamp.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
 <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recyclerView"
+    android:id="@+id/dataList1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 />
@@ -23,7 +23,7 @@
         tools:layout_editor_absoluteX="-16dp" />
 
     <FrameLayout
-        android:id="@+id/main_frame"
+        android:id="@+id/frame"
         android:layout_width="match_parent"
         android:layout_height="673dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
@@ -31,6 +31,5 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-    </FrameLayout>
+        app:layout_constraintVertical_bias="1.0"></FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
