--- a/front/app/src/main/res/layout/tourlist.xml
+++ b/front/app/src/main/res/layout/tourlist.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="100dp"
+    android:layout_marginTop="30dp">
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        app:cardCornerRadius="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -26,9 +23,8 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="105dp"
                 android:layout_marginTop="10dp"
-                android:layout_toRightOf="@id/image"
                 android:text="TextView" />
 
             <TextView
@@ -36,41 +32,40 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/title"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="73dp"
+                android:layout_marginLeft="73dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="-76dp"
-                android:layout_toRightOf="@id/image"
-                android:text="TextView" />
-
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:adjustViewBounds="true"
-                app:srcCompat="@mipmap/ic_launcher" />
+                android:layout_toEndOf="@+id/checkBox1"
+                android:layout_toRightOf="@+id/checkBox1"
+                android:text="TextView"
+                tools:layout_marginLeft="105dp" />
 
             <ImageView
                 android:id="@+id/numericalValueImage"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_alignStart="@+id/title"
-                android:layout_alignLeft="@+id/title"
-                android:layout_marginStart="195dp"
-                android:layout_marginLeft="195dp"
-                android:layout_marginTop="10dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="96dp"
+                android:layout_marginRight="96dp"
                 android:adjustViewBounds="true"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@mipmap/ic_launcher"
+                tools:layout_marginLeft="310dp" />
 
             <TextView
                 android:id="@+id/numericalValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginStart="227dp"
 
-                android:layout_marginLeft="227dp"
-                android:layout_marginTop="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="230dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="76dp"
+                android:layout_marginRight="76dp"
                 android:layout_marginBottom="-76dp"
                 android:text="TextView" />
 
@@ -78,12 +73,28 @@
                 android:id="@+id/distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="230dp"
+                android:layout_marginTop="58dp"
+                android:layout_marginEnd="76dp"
+                android:layout_marginRight="76dp"
+                android:text="TextView"
+                tools:layout_marginBottom="0" />
+
+            <CheckBox
+                android:id="@+id/checkBox1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
-                android:layout_marginStart="227dp"
-                android:layout_marginLeft="227dp"
-                android:text="TextView"
-                tools:layout_marginBottom="80dp" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="-2dp"
+                android:layout_marginBottom="0dp" />
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
