--- a/mosun/app/src/main/res/layout/activity_qr_popup.xml
+++ b/mosun/app/src/main/res/layout/activity_qr_popup.xml
@@ -1,60 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250dp"
-    android:layout_height="445dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
-<!--    <FrameLayout-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="#000">-->
+    <!--    <FrameLayout-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:background="#000">-->
 
-<!--        <ImageView-->
-<!--            android:id="@+id/zero_pay"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginBottom="2dp"-->
-<!--            android:scaleType="center"-->
-<!--            android:src="@drawable/zeropay" />-->
+    <!--        <ImageView-->
+    <!--            android:id="@+id/zero_pay"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_marginBottom="2dp"-->
+    <!--            android:scaleType="center"-->
+    <!--            android:src="@drawable/zeropay" />-->
 
-<!--    </FrameLayout>-->
+    <!--    </FrameLayout>-->
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="300dp"
         android:background="@color/colorBaseLight">
 
-        <TextView
-            android:id="@+id/limit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:lineSpacingExtra="5dp"
-            android:textAlignment="center" />
+        <!--        <TextView-->
+        <!--            android:id="@+id/limit"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_gravity="center"-->
+        <!--            android:textSize="15sp"-->
+        <!--            android:textStyle="bold"-->
+        <!--            android:lineSpacingExtra="5dp"-->
+        <!--            android:textAlignment="center" />-->
 
         <LinearLayout
             android:id="@+id/main_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="-15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/payment_rounded"
-            android:orientation="vertical"
             android:elevation="10dp"
+            android:orientation="vertical"
             android:padding="5dp"
             android:translationZ="10dp"
             android:visibility="invisible">
 
             <FrameLayout
                 android:id="@+id/qr_chekin"
-                android:layout_marginTop="30dp"
-                android:layout_gravity="top|center"
                 android:layout_width="200dp"
                 android:layout_height="170dp"
+                android:layout_gravity="top|center"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:layout_weight="1"
                 android:background="@drawable/payment_button_border">
@@ -63,9 +63,9 @@
                 <ImageView
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    android:src="@drawable/qr_code"
+                    android:layout_marginLeft="14dp"
                     android:layout_marginTop="12dp"
-                    android:layout_marginLeft="14dp" />
+                    android:src="@drawable/qr_code" />
 
                 <TextView
                     style="@style/SubTitleTheme"
@@ -92,18 +92,18 @@
             <FrameLayout
                 android:id="@+id/qr_scanner"
                 android:layout_width="200dp"
-                android:layout_gravity="bottom|center"
                 android:layout_height="170dp"
+                android:layout_gravity="bottom|center"
+                android:layout_marginBottom="20dp"
                 android:layout_weight="1"
-                android:background="@drawable/payment_button_border"
-                android:layout_marginBottom="15dp">
+                android:background="@drawable/payment_button_border">
 
                 <ImageView
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    android:src="@drawable/qr_code"
+                    android:layout_marginLeft="14dp"
                     android:layout_marginTop="12dp"
-                    android:layout_marginLeft="14dp" />
+                    android:src="@drawable/qr_code" />
 
                 <TextView
                     style="@style/SubTitleTheme"
@@ -140,9 +140,9 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_close_24dp"
+            android:background="@drawable/round_background_black"
             android:padding="10dp"
-            android:background="@drawable/round_background_black" />
+            android:src="@drawable/ic_close_24dp" />
 
     </FrameLayout>
 
