--- a/mosun/app/src/main/res/values/styles.xml
+++ b/mosun/app/src/main/res/values/styles.xml
@@ -21,6 +21,25 @@
         <item name="android:textColor">#000000</item>
     </style>
 
+    <style name="PopUpTheme" parent="Theme.AppCompat.DayNight.Dialog">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlHighlight">@color/colorPrimary</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+
+        <!-- 타이틀 바 없애기-->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+<!--        &lt;!&ndash; 글씨체 적용 &ndash;&gt;-->
+<!--        <item name="android:textViewStyle">@style/TextViewStyle</item>-->
+<!--        <item name="android:buttonStyle">@style/ButtonStyle</item>-->
+<!--        <item name="android:editTextStyle">@style/EditTextStyle</item>-->
+<!--        <item name="android:radioButtonStyle">@style/RadioButtonStyle</item>-->
+<!--        <item name="android:checkboxStyle">@style/CheckboxStyle</item>-->
+    </style>
+
     <style name="Button">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">2dip</item>
