--- a/mosun/app/src/main/res/drawable-v24/border_oval_active.xml
+++ b/mosun/app/src/main/res/drawable-v24/border_oval_active.xml
@@ -5,7 +5,7 @@
     <!-- 테두리 색 -->
     <stroke
         android:width="1dp"
-        android:color="@color/colorBaseCyan" />
+        android:color="@color/colorBaseQeenblue" />
 
     <padding
         android:left="7dp"
