--- a/mosun/app/src/main/res/layout/activity_login.xml
+++ b/mosun/app/src/main/res/layout/activity_login.xml
@@ -1,65 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/sub_background"
-    android:fillViewport="true"
-    tools:ignore="ScrollViewCount">
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="100dp">-->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorBase1"
+    android:gravity="bottom|center"
 
-<!--        <TextView-->
-<!--            android:id="@+id/textView"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:text="@string/textview" />-->
-<!--    </LinearLayout>-->
+    android:orientation="vertical">
 
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
-        android:gravity="bottom|center"
-        android:orientation="vertical">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView2"
+        <LinearLayout
+            android:id="@+id/main_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="200dp"
-            android:gravity="center"
-            android:text="찍 GO !"
-            android:textSize="50dp" />
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/payment_rounded"
+            android:elevation="10dp"
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:translationZ="10dp"
+            android:visibility="visible">
 
-        <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
-            android:id="@+id/buttonOAuthLoginImg"
-            android:layout_width="230dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="20dp" />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <com.kakao.usermgmt.LoginButton
-            android:id="@+id/btn_kakao_login"
-            android:layout_width="230dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="20dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
 
-        </com.kakao.usermgmt.LoginButton>
+                    android:orientation="vertical">
 
-        <Button
-            android:id="@+id/nextButton"
-            android:layout_width="230dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:text="Button" />
-    </LinearLayout>
+                    <!--        <TextView-->
+                    <!--            android:id="@+id/textView"-->
+                    <!--            android:layout_width="match_parent"-->
+                    <!--            android:layout_height="wrap_content"-->
+                    <!--            android:text="텍스트"-->
+                    <!--            android:textSize="50dp" />-->
+
+                    <ImageView
+                        android:id="@+id/mosun_logo"
+                        android:layout_width="300dp"
+                        android:layout_height="300dp"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/margin_normal"
+                        android:src="@drawable/stamp" />
+
+                    <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
+                        android:id="@+id/buttonOAuthLoginImg"
+                        android:layout_width="250dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp" />
+
+                    <com.kakao.usermgmt.LoginButton
+                        android:id="@+id/btn_kakao_login"
+                        android:layout_width="250dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="20dp">
+
+                    </com.kakao.usermgmt.LoginButton>
+
+<!--                    <Button-->
+<!--                        android:id="@+id/nextButton"-->
+<!--                        android:layout_width="250dp"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_gravity="center"-->
+
+<!--                        android:layout_marginBottom="50dp"-->
+<!--                        android:text="Button" />-->
+
+
+                </LinearLayout>
+
+                <!--                <LinearLayout-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="300dp"-->
+                <!--                    android:layout_gravity="center"-->
+                <!--                    android:orientation="vertical">-->
+                <!--                    &lt;!&ndash;    <TextView&ndash;&gt;-->
+                <!--                    &lt;!&ndash;        android:id="@+id/textView2"&ndash;&gt;-->
+                <!--                    &lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
+                <!--                    &lt;!&ndash;        android:layout_height="wrap_content"&ndash;&gt;-->
+                <!--                    &lt;!&ndash;        android:layout_marginBottom="70dp"&ndash;&gt;-->
+                <!--                    &lt;!&ndash;        android:gravity="center"&ndash;&gt;-->
+                <!--                    &lt;!&ndash;        android:text="언택트 투어"&ndash;&gt;-->
+                <!--                    &lt;!&ndash;        android:textSize="50dp" />&ndash;&gt;-->
+
+                <!--                </LinearLayout>-->
+
+            </FrameLayout>
+        </LinearLayout>
+    </FrameLayout>
+</LinearLayout>
 
 
 
-
-</ScrollView>
