--- a/mosun/app/src/main/res/layout/item_area_list.xml
+++ b/mosun/app/src/main/res/layout/item_area_list.xml
@@ -7,13 +7,13 @@
     android:layout_weight="1"
     android:background="@drawable/border_oval"
     android:gravity="center"
-    android:padding="10dp">
+    android:padding="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="10dp">
+        >
 
         <ImageView
             android:id="@+id/image_thumb"
@@ -22,16 +22,16 @@
             android:layout_weight="1"
             android:background="@null"
             android:scaleType="fitCenter"
-            android:src="@drawable/mosun_logo" />//이미지 바꾸기
+            android:src="@drawable/mosun_logo" />
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_weight="0"
-            android:gravity="center"
-            android:singleLine="true"
-            android:text="mosun"/>
+<!--        <TextView-->
+<!--            android:id="@+id/name"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:layout_weight="0"-->
+<!--            android:gravity="center"-->
+<!--            android:singleLine="true"-->
+<!--            android:text="mosun"/>-->
     </LinearLayout>
 </com.test.mosun.SquareLinearLayout>
