--- a/mosun/app/src/main/res/values/colors.xml
+++ b/mosun/app/src/main/res/values/colors.xml
@@ -4,13 +4,16 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <!--서울 식물원 색상 중 가장 어두운 초록색-->
-    <color name="colorBase">#4C7F3A</color>
+    <!--색상표 ( 가장 밝은 것부터 어두운 것의 순서-->
+    <color name="colorBase1">#84b9e4</color>
+    <color name="colorBase2">#436B95</color>
+    <color name="colorBase3">#9babbb</color>
+    <color name="colorBase4">#68748D</color>
 
-    <!-- 서울 식물원 색상 중 가장 밝은 색 -->
+    <color name="colorBase">#68748D</color>
     <color name="colorBaseLight">#C1D42D</color>
     <color name="colorBaseLightGreen">#90BC43</color>
-    <color name="colorBaseCyan">#55A37C</color>
+    <color name="colorBaseQeenblue">#436B95</color>
 
 
     <!--하단 바 비활성화일 때 색상(짙은 회색)-->
@@ -29,6 +32,6 @@
     <color name="colorCardView">#E7FF91</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBanner">#CCFAFFFA</color>
-
+    <color name="colorBlack">#000000</color>
 
 </resources>
