--- a/mosun/app/src/main/res/values/styles.xml
+++ b/mosun/app/src/main/res/values/styles.xml
@@ -40,6 +40,15 @@
 <!--        <item name="android:checkboxStyle">@style/CheckboxStyle</item>-->
     </style>
 
+    <style name="ItemTextTheme" parent="@android:style/Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="Button">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">2dip</item>
