--- a/mosun/app/src/main/res/layout/activity_login.xml
+++ b/mosun/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBase1"
+    xmlns:andrid="http://schemas.android.com/tools"
+    android:background="@drawable/main_background_1"
     android:gravity="bottom|center"
 
     android:orientation="vertical">
@@ -17,18 +18,20 @@
 
         <LinearLayout
             android:id="@+id/main_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="150dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/payment_rounded"
+            android:background="@drawable/border_normal"
             android:elevation="10dp"
             android:orientation="vertical"
             android:padding="5dp"
             android:translationZ="10dp"
-            android:visibility="visible">
+            android:visibility="visible"
+            andrid:layoutAnimation = "@anim/slide_up_activity">
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -47,13 +50,13 @@
                     <!--            android:text="텍스트"-->
                     <!--            android:textSize="50dp" />-->
 
-                    <ImageView
-                        android:id="@+id/mosun_logo"
-                        android:layout_width="300dp"
-                        android:layout_height="300dp"
-                        android:layout_gravity="center"
-                        android:layout_margin="@dimen/margin_normal"
-                        android:src="@drawable/stamp" />
+                    <!--                    <ImageView-->
+                    <!--                        android:id="@+id/mosun_logo"-->
+                    <!--                        android:layout_width="300dp"-->
+                    <!--                        android:layout_height="300dp"-->
+                    <!--                        android:layout_gravity="center"-->
+                    <!--                        android:layout_margin="@dimen/margin_normal"-->
+                    <!--                        android:src="@drawable/stamp" />-->
 
                     <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
                         android:id="@+id/buttonOAuthLoginImg"
@@ -72,14 +75,14 @@
 
                     </com.kakao.usermgmt.LoginButton>
 
-<!--                    <Button-->
-<!--                        android:id="@+id/nextButton"-->
-<!--                        android:layout_width="250dp"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_gravity="center"-->
+                    <Button
+                        android:id="@+id/nextButton"
+                        android:layout_width="250dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
 
-<!--                        android:layout_marginBottom="50dp"-->
-<!--                        android:text="Button" />-->
+                        android:layout_marginBottom="50dp"
+                        android:text="다음화면 버튼" />
 
 
                 </LinearLayout>
