[update] Fragment_Stamp - Change the stamp list when selecting a Area

--- a/soljik/app/src/main/res/layout/fragment_stamp.xml
+++ b/soljik/app/src/main/res/layout/fragment_stamp.xml
@@ -52,6 +52,14 @@
                     />
 
 
+                <TextView
+                    android:id="@+id/selectedArea"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:text="[지역 : 서울]" />
+
                 <ImageButton
                     android:id="@+id/help_btn"
                     android:layout_width="12dp"
